src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__for_statement_supports_semicolons.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Range(
                        IterRange {
                            start: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            end: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            inclusive: false,
                        },
                    ),
                    body: [
                        Print(
                            Print {
                                values: [
                                    GetVar(
                                        GetVar {
                                            name: Ident(
                                                "x",
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
        Var(
            Var {
                name: Ident(
                    "x",
                ),
                value: Literal(
                    Int(
                        0,
                    ),
                ),
            },
        ),
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Range(
                        IterRange {
                            start: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            end: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            inclusive: false,
                        },
                    ),
                    body: [
                        Expr(
                            SetVar(
                                SetVar {
                                    target: GetVar {
                                        name: Ident(
                                            "x",
                                        ),
                                    },
                                    value: Binary(
                                        Binary {
                                            op: Add,
                                            left: GetVar(
                                                GetVar {
                                                    name: Ident(
                                                        "x",
                                                    ),
                                                },
                                            ),
                                            right: GetVar(
                                                GetVar {
                                                    name: Ident(
                                                        "i",
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        ),
                        Print(
                            Print {
                                values: [
                                    GetVar(
                                        GetVar {
                                            name: Ident(
                                                "x",
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
        Print(
            Print {
                values: [
                    GetVar(
                        GetVar {
                            name: Ident(
                                "x",
                            ),
                        },
                    ),
                ],
            },
        ),
    ],
}
