src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__for_statements_can_be_nested_on_the_same_line.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Loop(
            For(
                For {
                    item: Ident(
                        "y",
                    ),
                    iter: Range(
                        IterRange {
                            start: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            end: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            inclusive: false,
                        },
                    ),
                    body: [
                        Loop(
                            For(
                                For {
                                    item: Ident(
                                        "x",
                                    ),
                                    iter: Range(
                                        IterRange {
                                            start: Literal(
                                                Int(
                                                    0,
                                                ),
                                            ),
                                            end: Literal(
                                                Int(
                                                    10,
                                                ),
                                            ),
                                            inclusive: false,
                                        },
                                    ),
                                    body: [
                                        Print(
                                            Print {
                                                values: [
                                                    Literal(
                                                        String(
                                                            "x * y =",
                                                        ),
                                                    ),
                                                    Binary(
                                                        Binary {
                                                            op: Mul,
                                                            left: GetVar(
                                                                GetVar {
                                                                    name: Ident(
                                                                        "x",
                                                                    ),
                                                                },
                                                            ),
                                                            right: GetVar(
                                                                GetVar {
                                                                    name: Ident(
                                                                        "y",
                                                                    ),
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                        Print(
                            Print {
                                values: [
                                    Literal(
                                        String(
                                            "------------",
                                        ),
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
