src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__func_stmt.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Func(
            Func {
                name: Ident(
                    "f",
                ),
                params: Params {
                    has_self: false,
                    pos: [
                        Param {
                            name: Ident(
                                "a",
                            ),
                            default: None,
                        },
                        Param {
                            name: Ident(
                                "b",
                            ),
                            default: None,
                        },
                        Param {
                            name: Ident(
                                "c",
                            ),
                            default: None,
                        },
                    ],
                },
                body: [
                    Pass,
                ],
                has_yield: false,
            },
        ),
        Func(
            Func {
                name: Ident(
                    "f",
                ),
                params: Params {
                    has_self: false,
                    pos: [
                        Param {
                            name: Ident(
                                "a",
                            ),
                            default: None,
                        },
                        Param {
                            name: Ident(
                                "b",
                            ),
                            default: None,
                        },
                        Param {
                            name: Ident(
                                "c",
                            ),
                            default: Some(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "d",
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                },
                body: [
                    Pass,
                ],
                has_yield: false,
            },
        ),
        Func(
            Func {
                name: Ident(
                    "f",
                ),
                params: Params {
                    has_self: false,
                    pos: [
                        Param {
                            name: Ident(
                                "a",
                            ),
                            default: None,
                        },
                        Param {
                            name: Ident(
                                "b",
                            ),
                            default: Some(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "c",
                                        ),
                                    },
                                ),
                            ),
                        },
                        Param {
                            name: Ident(
                                "d",
                            ),
                            default: Some(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "e",
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                },
                body: [
                    Pass,
                ],
                has_yield: false,
            },
        ),
    ],
}
