src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__import_statements_support_semicolons.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Import(
            Module {
                path: [
                    Ident(
                        "a",
                    ),
                ],
                alias: None,
            },
        ),
        Import(
            Module {
                path: [
                    Ident(
                        "b",
                    ),
                ],
                alias: None,
            },
        ),
        Import(
            Symbols {
                path: [
                    Ident(
                        "a",
                    ),
                ],
                symbols: [
                    ImportSymbol {
                        name: Ident(
                            "b",
                        ),
                        alias: None,
                    },
                ],
            },
        ),
        Import(
            Module {
                path: [
                    Ident(
                        "x",
                    ),
                ],
                alias: None,
            },
        ),
        Import(
            Symbols {
                path: [
                    Ident(
                        "c",
                    ),
                ],
                symbols: [
                    ImportSymbol {
                        name: Ident(
                            "d",
                        ),
                        alias: None,
                    },
                ],
            },
        ),
        Import(
            Module {
                path: [
                    Ident(
                        "http",
                    ),
                ],
                alias: None,
            },
        ),
        Import(
            Symbols {
                path: [
                    Ident(
                        "json",
                    ),
                ],
                symbols: [
                    ImportSymbol {
                        name: Ident(
                            "parse",
                        ),
                        alias: None,
                    },
                ],
            },
        ),
        Print(
            Print {
                values: [
                    Call(
                        Call {
                            target: GetVar(
                                GetVar {
                                    name: Ident(
                                        "parse",
                                    ),
                                },
                            ),
                            args: [
                                Call(
                                    Call {
                                        target: GetField(
                                            GetField {
                                                target: GetVar(
                                                    GetVar {
                                                        name: Ident(
                                                            "http",
                                                        ),
                                                    },
                                                ),
                                                name: Ident(
                                                    "get",
                                                ),
                                            },
                                        ),
                                        args: [
                                            Literal(
                                                String(
                                                    "https://jsonplaceholder.typicode.com/todos/1",
                                                ),
                                            ),
                                        ],
                                    },
                                ),
                            ],
                        },
                    ),
                ],
            },
        ),
    ],
}
