src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__trailing_statements_of_nested_blocks_are_included_in_outer_block_body.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Loop(
            While(
                While {
                    cond: GetVar(
                        GetVar {
                            name: Ident(
                                "outer",
                            ),
                        },
                    ),
                    body: [
                        Print(
                            Print {
                                values: [
                                    Literal(
                                        String(
                                            "outer",
                                        ),
                                    ),
                                ],
                            },
                        ),
                        Loop(
                            While(
                                While {
                                    cond: GetVar(
                                        GetVar {
                                            name: Ident(
                                                "inner",
                                            ),
                                        },
                                    ),
                                    body: [
                                        Ctrl(
                                            Break,
                                        ),
                                    ],
                                },
                            ),
                        ),
                        Print(
                            Print {
                                values: [
                                    Literal(
                                        String(
                                            "after inner",
                                        ),
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
